# abacus-minimal

./: .gitignore  README.md  abacus.hs  abacus.py  justfile  not_used.hs  notes.hs  package-lock.json  package.json  pyproject.toml  pytest.ini  r.py  readme.py  test_abacus.py
abacus/: __init__.py  base.py  book.py  chart.py  core.py  entry.py  ledger.py  main.py
abacus_prev/: __init__.py
examples/: README.md  _readme.py  autotest.py  bad_prose.txt  book.py  chart.py  end_balances.json  entries.json  entry.py  events.py  example.py  micro.py  minimal.py  mixin.py  more.py  more_prose.md  my_book.py  readme.py  roadmap.md  test_chart.py  test_events.py
examples/abacus/: base.py  book.py  chart.py  entry.py
haskell/: CHANGELOG.md  LICENSE  abacus.cabal
haskell/app/: App.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/packagedb/ghc-9.4.8/: abacus-0.0.1-inplace.conf  package.cache
haskell/src/: Abacus.hs  Bases.hs  Chart.hs  Ledger.hs  MyLib.hs  Print.hs  Types.hs
haskell/test/: Main.hs  Testing.hs
haskell2/: abacus.cabal
haskell2/app/: Main.hs
pkg/: pyproject.toml
posts/: 1.sql
prose/: assumptions.md
tests/: conftest.py  test_abacus.py  test_book.py  test_chart.py  test_core.py  test_entry.py  test_entry2.py  test_generate.py  test_ledger.py  test_mixed.py
