[tool.poetry]
name = "abacus-minimal"
version = "0.1.0"
description = "Ledger in Python that follows corporate accounting rules."
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "abacus"}
]


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.12.0"
ruff = "^0.6.9"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
